--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,14 +13,15 @@
             android:layout_height="wrap_content"
             android:layout_width="160dp"
             android:inputType="numberDecimal"
-            android:hint="Cost of Service"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
+            android:hint="@string/cost_of_service"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
             android:id="@+id/service_question"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="How was the services?"
+            android:text="@string/how_was_the_service"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cost_of_service"/>
 
@@ -37,17 +38,17 @@
                 android:id="@+id/option_twenty_percent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Amazing (20%)"/>
+                android:text="@string/amazing_service"/>
         <RadioButton
                 android:id="@+id/option_eighteen_percent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Good (18%)"/>
+                android:text="@string/good_service"/>
         <RadioButton
                 android:id="@+id/option_fifteen_percent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="OK (15%)"/>
+                android:text="@string/ok_service"/>
     </RadioGroup>
 
     <Switch
@@ -55,14 +56,14 @@
             android:checked="true"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Round up tip?"
+            android:text="@string/round_up_tip"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tip_options"/>
 
     <Button
             android:id="@+id/calculate_button"
-            android:text="Calculate"
+            android:text="@string/calculate"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@+id/round_up_switch"
@@ -71,7 +72,7 @@
 
     <TextView
             android:id="@+id/tip_result"
-            android:text="Tip Amount"
+            android:text="@string/tip_amount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
